--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!doctype html>
-<html>
-<head>
+<html><head>
 <title>Большое обновление!</title>
+<link rel="icon" href="/logo.png">
 <meta charset="utf-8">
+<style>
+    @font-face{
+    font-family:"Euclid";
+    src:url("/euclid.ttf")
+    }
+    *{
+    box-sizing:border-box
+    }
+    body{
+    font-family:'Euclid';
+    margin:0;
+    padding:0;
+    }
+h1,h2,h3,h4,h5{
+font-weight:300;
+
+}</style>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<h1>Скоро обновление!</h1>
-</body>
-</html>
+<h1 style="
+    margin-top: 30px;
+    text-align: center;
+    font-size: 2.2em;
+">Скоро обновление!</h1>
+
+
+</body></html>
