--- a/404.html
+++ b/404.html
@@ -19,15 +19,40 @@
 h1,h2,h3,h4,h5{
 font-weight:300;
 
+}
+.message h1{
+
+    margin-top: 30px;
+    text-align: center;
+    font-size: 2.2em;
+    }
+.msg{
+background:black;
+border-radius:14px
+}
+.msg p{
+color:white;
 }</style>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<h1 style="
+<div class="message" style="
+    padding: 15px 25px;
+    background: #f7f7f7;
+    width: 550px;
+    height: fit-content;
+    margin: auto;
+    border-radius: 15px;
     margin-top: 30px;
-    text-align: center;
-    font-size: 2.2em;
-">Скоро обновление!</h1>
+    padding-bottom: 20px;
+"><h1>Скоро обновление!</h1>
+    <div class="msg">
+    <p>Сейчас мы работаем над новым обновлением.</p>
+        <p style="
+    margin-top: 6px;
+">В нём мы добавим много новых функций и улучшим производительность.</p></div>
+</div>
+
 
 
 </body></html>
