--- a/index.html
+++ b/index.html
@@ -21,17 +21,20 @@ font-weight:300;
 
 }
 .message h1{
-
-    margin-top: 30px;
+margin: 10px 0;
+    margin-bottom: 20px;
     text-align: center;
-    font-size: 2.2em;
+    font-size: 2.1em;
     }
 .msg{
-background:black;
-border-radius:14px
+background: #02b478;
+    padding: 15px;
+    border-radius: 14px;
 }
 .msg p{
-color:white;
+    color: white;
+    margin: 0;
+    font-size: 1.1em;
 }</style>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
