--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title>Большое обновление!</title>
 <link rel="icon" href="/logo.png">
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
     @font-face{
     font-family:"Euclid";
@@ -22,8 +24,9 @@ font-weight:300;
 }
 .message h1{
 margin: 10px 0;
-    margin-bottom: 20px;
+    margin-bottom: 18px;
     text-align: center;
+font-size:1.85em;
     }
 .msg{
 background: #02b478;
@@ -34,25 +37,37 @@ background: #02b478;
     color: white;
     margin: 0;
     font-size: 1.1em;
-}</style>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+}
+.vk{
+background: #02b478;
+width:fit-content;
+    padding: 8px;
+    border-radius: 12px;
+}
+.vk p{
+    color: white;
+    margin: 0;
+    font-size: 1.15em;
+}
+</style>
 </head>
 <body>
 <div class="message" style="
-    padding: 15px 25px;
+    padding: 15px 21px;
     background: #f7f7f7;
     width: 550px;
     height: fit-content;
     margin: auto;
     border-radius: 17px;
     margin-top: 30px;
-    padding-bottom: 20px;
+    padding-bottom: 18px;
 "><h1>Скоро обновление!</h1>
     <div class="msg">
-    <p>Сейчас мы работаем над новым обновлением.</p>
+    <p>Сейчас мы работаем над большим обновлением.</p>
         <p style="
     margin-top: 6px;
 ">В нём мы добавим много новых функций и улучшим производительность.</p></div>
+<div class="vk"><p>Наша группа ВК</p></div>
 </div>
 
 
