--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@ background: #02b478;
 .vk{
 background: #02b478;
 width:fit-content;
-    padding: 8px;
-    border-radius: 12px;
+    padding: 9px;
+margin-top:15px;
+    border-radius: 10px;
 }
 .vk p{
     color: white;
     margin: 0;
-    font-size: 1.15em;
+    font-size: 1.05em;
 }
 </style>
 </head>
