--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ background: #02b478;
     font-size: 1.1em;
 }
 .vk{
-background: #02b478;
+background: #2787f5;
 width:fit-content;
-    padding: 9px;
+    padding:11px;
 margin-top:15px;
     border-radius: 10px;
 }
