--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@ margin-top:15px;
     margin: 0;
     font-size: 1.05em;
 }
+@media(max-width:550px){
+.message{
+border-top-left-radius:0!important;
+border-top-right-radius:0!important;
+margin:0!important;
+width:100vw!important;
+}
+}
 </style>
 </head>
 <body>
