--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@ border-top-left-radius:0!important;
 border-top-right-radius:0!important;
 margin:0!important;
 width:100vw!important;
+padding-bottom:20px!important;
+}
+.msg p:last-of-type{
+margin-top:8px!important;
 }
 }
 </style>
