--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ margin-top:8px!important;
         <p style="
     margin-top: 6px;
 ">В нём мы добавим много новых функций и улучшим производительность.</p></div>
-<div class="vk"><p>Наша группа ВК</p></div>
+<div class="vk"><a href=""><p>Наша группа ВК</p></a></div>
 </div>
 
 
