--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     *{
     box-sizing:border-box
     }
+a{
+text-decoration:none;
+}
     body{
     font-family:'Euclid';
     margin:0;
@@ -52,6 +55,7 @@ margin-top:15px;
 }
 @media(max-width:550px){
 .message{
+border-radius:20px;
 border-top-left-radius:0!important;
 border-top-right-radius:0!important;
 margin:0!important;
