--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     font-family:"Euclid";
     src:url("/euclid.ttf")
     }
+    @font-face{
+    font-family:"Sharp";
+    src:url("/sharp.ttf")
+    }
     *{
     box-sizing:border-box
     }
@@ -27,6 +31,7 @@ font-weight:300;
 }
 .message h1{
 margin: 10px 0;
+    font-family:"Sharp";
     margin-bottom: 18px;
     text-align: center;
 font-size:1.85em;
