--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     font-family:"Euclid";
     src:url("/euclid.ttf")
     }
-    @font-face{
-    font-family:"Sharp";
-    src:url("/sharp.ttf")
-    }
+   
     *{
     box-sizing:border-box
     }
@@ -31,7 +28,7 @@ font-weight:300;
 }
 .message h1{
 margin: 10px 0;
-    font-family:"Sharp";
+    font-weight:400;
     margin-bottom: 18px;
     text-align: center;
 font-size:1.85em;
