--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     *{
     box-sizing:border-box
     }
+    ::selection{
+    background:#02b478;
+    color:#fff;
+    }
 a{
 text-decoration:none;
 }
