--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@ margin-top:15px;
     margin: 0;
     font-size: 1.05em;
 }
+    .message{
+        opacity:0;
+    animation:.3s mainanim;
+    }
+    @keyframes mainanim{
+        from{
+        opacity:0;
+        }
+        to{
+        opacity:1;
+        }
+    }
 @media(max-width:590px){
 .message{
 border-radius:20px;
