--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ margin-top:15px;
     .message{
         opacity:0;
     animation:.3s mainanim;
+        animation-fill-mode: forwards;
     }
     @keyframes mainanim{
         from{
